edit product fix zooming issue on mobile and photo sizes

--- a/apps/seller/static/css/photo_upload.css
+++ b/apps/seller/static/css/photo_upload.css
@@ -7,12 +7,16 @@
   padding: 3px;
   margin: 0 auto 10px;
   border: 2px solid #F0F0F0;
+}@media (max-width: 400px){
+  .image{width:200px; height:150px;}
 }
 
 .photo{
   width: 300px;
   height: 225px;
   background-color: #EEE;
+}@media (max-width: 400px){
+  .photo{width:200px; height:150px;}
 }
 
 /* hide the "choose file input" behind button
@@ -25,7 +29,10 @@
   width: 90px;
   padding: 0;
   margin: 0;
+}@media (max-width: 400px){
+  .photo-form{left: 60px;}
 }
+
 .file-wrapper {
   cursor: pointer;
   display: inline-block;
